--- a/Greek/main/MiTagApp.apk/res/values-el/strings.xml
+++ b/Greek/main/MiTagApp.apk/res/values-el/strings.xml
@@ -48,19 +48,19 @@ touch it with the back of your phone"</string>
   <string name="contact_phone">Τηλέφωνο</string>
   <string name="contact_title">Τίτλος</string>
   <string name="create">Create</string>
-  <string name="create_configs_prompt">To add a task, touch Add</string>
-  <string name="create_tag">New</string>
+  <string name="create_configs_prompt">Για προσθήκη εργασίας, πατήστε Προσθήκη</string>
+  <string name="create_tag">Νέα</string>
   <string name="delete">Διαγραφή</string>
-  <string name="deleting">Deleting…</string>
+  <string name="deleting">Διαγραφή…</string>
   <string name="detect_empty_tag">Empty tag detected</string>
   <string name="detect_tag">Tag detected</string>
-  <string name="dialog_select_account">Select account</string>
+  <string name="dialog_select_account">Επιλέξτε λογαριασμό</string>
   <string name="diselect_all">Αποεπιλογή όλων</string>
   <string name="display">Display</string>
   <string name="disturb_mode">Νυχτερινή σίγαση</string>
   <string name="edit_tag">Επεξεργασία</string>
-  <string name="edit_tag_content">touch it with the back of your phone</string>
-  <string name="email_body">Message</string>
+  <string name="edit_tag_content">αγγίζετε με το πίσω μέρος του τηλεφώνου σας</string>
+  <string name="email_body">Μήνυμα</string>
   <string name="email_subject">Θέμα</string>
   <string name="email_to">To</string>
   <string name="empty_tag">This tag is blank</string>
@@ -72,24 +72,24 @@ touch it with the back of your phone"</string>
   <string name="err_fail_to_write">Failed to write tag</string>
   <string name="err_nfc_off">Turn on NFC in Settings &gt; Wireless &amp; networks &gt; More &gt; NFC</string>
   <string name="err_no_enough_space">No enough space on tag</string>
-  <string name="err_no_nfc">"Your phone doesn't support NFC. This app may not work."</string>
+  <string name="err_no_nfc">"Το τηλέφωνό σας δεν υποστηρίζει NFC. Αυτή η εφαρμογή μπορεί να μην λειτουργήσει."</string>
   <string name="err_tag_not_supported">"Your phone doesn't support tagging"</string>
-  <string name="error_password">Error password</string>
-  <string name="failed_install">Failed to install</string>
+  <string name="error_password">Λάθος κωδικός</string>
+  <string name="failed_install">Αποτυχία εγκατάστασης</string>
   <string name="help_title">Βοήθεια</string>
   <string name="hint_input_address">Διεύθυνση</string>
   <string name="hint_input_alarm_label">Enter alarm label</string>
-  <string name="hint_input_message">Message</string>
-  <string name="hint_input_phone">Enter phone number</string>
-  <string name="hint_input_sms">Enter message</string>
+  <string name="hint_input_message">Μήνυμα</string>
+  <string name="hint_input_phone">Εισάγετε τον αριθμό τηλεφώνου</string>
+  <string name="hint_input_sms">Πληκτρολογήστε το μήνυμα</string>
   <string name="hint_input_subject">Θέμα</string>
-  <string name="hint_input_web_label">Name of web site</string>
+  <string name="hint_input_web_label">Όνομα της ιστοσελίδας</string>
   <string name="hint_input_web_url">URL</string>
-  <string name="hint_wifi_password">Enter WLAN password</string>
-  <string name="inconsistent_password">Inconsistent password, please try again</string>
-  <string name="input_new_password">Please enter the new four numerical password</string>
-  <string name="input_old_password">Please enter the saved password</string>
-  <string name="input_password">Please enter the four numerical password</string>
+  <string name="hint_wifi_password">Εισάγετε τον κωδικό WLAN</string>
+  <string name="inconsistent_password">Λάθος κωδικό πρόσβασης, παρακαλώ προσπαθήστε ξανά</string>
+  <string name="input_new_password">Παρακαλώ εισάγετε το νέο τετραψήφιο αριθμητικό κωδικό πρόσβασης</string>
+  <string name="input_old_password">Παρακαλώ εισάγετε τον αποθηκευμένο κωδικό πρόσβασης</string>
+  <string name="input_password">Παρακαλώ εισάγετε το τετραψήφιο αριθμητικό κωδικό πρόσβασης</string>
   <string name="input_password_gain">Please enter the password gain</string>
   <string name="input_password_warning">"Password will be written to tag, don't forget it!"</string>
   <string name="local_app">Downloaded apps</string>
@@ -138,12 +138,12 @@ touch it with the back of your phone"</string>
   <string name="screen_timeout">Sleep</string>
   <string name="screen_timeout_summary">After %s of inactivity</string>
   <string name="select_all">Επιλογή όλων</string>
-  <string name="select_app">Select app</string>
-  <string name="select_config">New tasks</string>
-  <string name="send_email">Send mail</string>
-  <string name="send_sms">Send text message</string>
-  <string name="send_sms_to">Recipients</string>
-  <string name="set_alarm">Set an alarm</string>
+  <string name="select_app">Επιλέξτε εφαρμογή</string>
+  <string name="select_config">Νέες εργασίες</string>
+  <string name="send_email">Αποστολή mail</string>
+  <string name="send_sms">Αποστολή μηνύματος κειμένου</string>
+  <string name="send_sms_to">Παραλήπτες</string>
+  <string name="set_alarm">Ορίστε μια ειδοποίηση</string>
   <string name="set_now">Ρυθμίσεις</string>
   <string name="settings">Ρυθμίσεις</string>
   <string name="share">Διαμοιρασμός</string>
@@ -160,11 +160,11 @@ touch it with the back of your phone"</string>
   <string name="sound_ringer">Ringer</string>
   <string name="sound_voice">Call volume</string>
   <string name="start_configuration">Διαμόρφωση ετικέτας</string>
-  <string name="sure_to_delete_user_config">Delete this task?</string>
+  <string name="sure_to_delete_user_config">Διαγραφή αυτής της εργασίας?</string>
   <string name="tag_history">Ιστορικό</string>
   <string name="tag_history_date_format">d/M</string>
   <string name="task">Ορισμός ενέργειας</string>
-  <string name="toast_import_failed">Failed to import contact</string>
+  <string name="toast_import_failed">Αποτυχία εισαγωγής επαφής</string>
   <string name="toggle">Toggle</string>
   <string name="torch">Torch</string>
   <string name="total_read_tag">Tags read:</string>
@@ -173,14 +173,14 @@ touch it with the back of your phone"</string>
 touch the back of your phone to another tag."</string>
   <string name="touch_and_write_more">"To write another copy,
 touch the back of your phone to another tag."</string>
-  <string name="unavailable_net">"Failed to install: Couldn't connect to network"</string>
-  <string name="unavailable_storage">"Failed to install: Couldn't use your SD card"</string>
+  <string name="unavailable_net">"Απέτυχε η εγκατάσταση: δεν ήταν δυνατή η σύνδεση με το δίκτυο"</string>
+  <string name="unavailable_storage">"Απέτυχε η εγκατάσταση: δεν ήταν δυνατή η χρήση της κάρτας SD"</string>
   <string name="unrecognized_tag">Unrecognized tag content</string>
-  <string name="update_config">Edit tasks</string>
-  <string name="user_configs">My tasks</string>
+  <string name="update_config">Επεξεργασία εργασιών</string>
+  <string name="user_configs">Οι εργασίες μου</string>
   <string name="vibrate_mode">Δόνηση</string>
-  <string name="vibrate_off">Vibrate off</string>
-  <string name="vibrate_on">Vibrate on</string>
+  <string name="vibrate_off">Απενεργοποίηση δόνησης</string>
+  <string name="vibrate_on">Ενεργοποίηση δόνησης</string>
   <string name="voice_call_value">Call volume %s%%</string>
   <string name="volume">Ήχος</string>
   <string name="web_label">Web label (optional)</string>
@@ -192,7 +192,7 @@ touch the back of your phone to another tag."</string>
   <string name="write_success">Done writing</string>
   <string name="write_tag">Write tag</string>
   <string name="xiaomi_bytes_unit">%1$sB</string>
-  <string name="xiaomi_external_storage_unavailable">Storage unavailable, please check the SD card.</string>
+  <string name="xiaomi_external_storage_unavailable">Αποθήκευση μη διαθέσιμη, παρακαλώ να ελέγξετε την κάρτα SD.</string>
   <string name="xiaomi_kilobytes_unit">%1$sKB</string>
   <string name="xiaomi_megabytes_unit">%1$sMB</string>
   <string name="xiaomi_update_dialog_message">"Introducing version %1$s
